Update parent POM, move to Java 11